--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,12 @@
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
     "paths": {                                           /* Specify a set of entries that re-map imports to additional lookup locations. */
-      "@config": ["src/shared/config/index.ts"]
-    },                                         
+      "@routers": ["src/routers/index.ts"],
+      "@services": ["src/services/index.ts"],
+
+      "@config": ["src/shared/config/index.ts"],
+      "@utils": ["src/shared/utils/index.ts"],
+    },
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
