--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
       "@services": ["src/services/index.ts"],
 
       "@config": ["src/shared/config/index.ts"],
+      "@types": ["src/shared/types/index.ts"],
       "@utils": ["src/shared/utils/index.ts"],
     },
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
