--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@services": ["src/services/index.ts"],
 
       "@config": ["src/shared/config/index.ts"],
+      "@mappers": ["src/shared/mappers/index.ts"],
       "@types": ["src/shared/types/index.ts"],
       "@utils": ["src/shared/utils/index.ts"],
     },
