--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "logiclabapits",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node --env-file=.env dist/index.js",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts"
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts"
   },
   "keywords": [],
   "author": "",
