--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,14 +29,15 @@
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
     "paths": {                                           /* Specify a set of entries that re-map imports to additional lookup locations. */
+      "@config": ["src/config/index.ts"],
       "@database": ["src/database/index.ts"],
       "@middleware": ["src/middleware/index.ts"],
       "@routers": ["src/routers/index.ts"],
       "@services": ["src/services/index.ts"],
-
-      "@config": ["src/shared/config/index.ts"],
+      
       "@logger": ["src/shared/logger/index.ts"],
       "@mappers": ["src/shared/mappers/index.ts"],
+      "@schemas": ["src/shared/schemas/index.ts"],
       "@types": ["src/shared/types/index.ts"],
       "@utils": ["src/shared/utils/index.ts"],
     },
