--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "npm run build && node --env-file=.env dist/server.js",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts",
-
     "spell": "cspell ./src/**"
   },
   "keywords": [],
@@ -17,11 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "concurrently": "^9.1.2",
     "cspell": "^8.18.1",
     "nodemon": "^3.1.9",
